--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
+    "vue-touch": "^2.0.0-beta.4",
     "vue-video-player": "^4.0.0",
     "vux-loader": "^1.0.69",
     "webpack": "^2.6.1",
